changed the names on the exo planet service so that they are easier to read and understand , refactored the bar chart to be cleaner looking and added styles for it