@@ -1,25 +1,18 @@
 package com.tek.dataproject.FXMLControllers;
 
 import com.tek.dataproject.Services.CenterPanelService;
-import com.tek.dataproject.Services.DataDisplayService;
 import com.tek.dataproject.Services.ExoplanetService;
-import com.tek.dataproject.Services.SolarSystemPlanetService;
 import com.tek.dataproject.TableRecord.Exoplanet;
 import javafx.application.HostServices;
 import javafx.application.Platform;
 import javafx.fxml.FXML;
-import javafx.scene.Node;
 import javafx.scene.canvas.Canvas;
 import javafx.scene.canvas.GraphicsContext;
-import javafx.scene.chart.BarChart;
-import javafx.scene.chart.StackedAreaChart;
-import javafx.scene.chart.XYChart;
+import javafx.scene.chart.*;
 import javafx.scene.control.*;
 import javafx.scene.layout.StackPane;
-import javafx.scene.layout.VBox;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
-import javafx.scene.image.ImageView;
 
 import java.util.*;
 
@@ -27,38 +20,43 @@ import java.util.*;
 public class DashboardController {
 
     // Service layer instances — connect the UI to the business logic
-    @Autowired private ExoplanetService exoplanetService;
-    @Autowired private DataDisplayService dataDisplayService;
-    @Autowired private SolarSystemPlanetService solarSystemPlanetService;
-    @Autowired private CenterPanelService centerPanelService;
+    @Autowired
+    private ExoplanetService exoplanetService;
+    @Autowired
+    private CenterPanelService centerPanelService;
 
     //The connection to the actual ui fields that are interactive with the backend
     //FXML makes sure that javaFX injects the values when it loads the fxml
 
     //top planet and system display
-    @FXML private Label planetNameDisplay;
-    @FXML private Label hostStarNameDisplay;
-    @FXML private StackPane systemPane;
-    @FXML private Hyperlink hyperLink;
-    @FXML private Label urlLabel;
+    @FXML
+    private Label planetNameDisplay;
+    @FXML
+    private Label hostStarNameDisplay;
+    @FXML
+    private StackPane systemPane;
+    @FXML
+    private Hyperlink hyperLink;
+    @FXML
+    private Label urlLabel;
 
     //split pane fxml with the charts
-    @FXML private StackedAreaChart <String, Number> stackedAreaChart;
-    @FXML private BarChart<String, Number> barChart;
+    @FXML
+    private StackedAreaChart<String, Number> stackedAreaChart;
+    @FXML
+    private BarChart<String, Number> barChart;
 
     //Left Vbox FXML
-    @FXML private TextField planetSearchField;
-    @FXML private ComboBox<String> planetTypeComboBox;
-    @FXML private ComboBox<String> discoveryMethodComboBox;
-    @FXML private ToggleButton habitableToggle;
-    @FXML private ToggleButton recentToggle;
-    @FXML private Button applyFiltersButton;
-    @FXML private Button clearFiltersButton;
-    @FXML private Label resultsCountLabel;
-
+    @FXML
+    private ComboBox<String> planetTypeComboBox;
+    @FXML
+    private ComboBox<String> discoveryMethodComboBox;
+    @FXML
+    private ToggleButton habitableToggle;
 
     //This is a java fx class needed to bridge the app and the operating system, allowing me to open the document with whatever the default is
     private HostServices hostServices;
+
     public void setHostServices(HostServices hostServices) {
         this.hostServices = hostServices;
     }
@@ -72,11 +70,12 @@ public class DashboardController {
             try {
                 renderSystem("Sun", null);
             } catch (Exception e) {
-                e.printStackTrace();
+                System.out.println(e.getMessage());
             }
         });
     }
 
+    //Gives the values for the dropdown boxes
     private void setupComboBoxes() {
         planetTypeComboBox.getItems().addAll("All Types", "Rocky", "Gas Giant", "Super Earth");
         planetTypeComboBox.setValue("All Types");
@@ -85,40 +84,33 @@ public class DashboardController {
     }
 
     @FXML //uses the filters
-    private void handleApplyFilters() throws Exception{
+    private void handleApplyFilters() throws Exception {
         //this data will be used to search for a possible valid planet
         String selectedPlanetType = planetTypeComboBox.getValue();
         String selectedDiscoveryMethod = discoveryMethodComboBox.getValue();
         if ("All Types".equals(selectedPlanetType)) {
             selectedPlanetType = null;
         }
-
         if ("All Methods".equals(selectedDiscoveryMethod)) {
             selectedDiscoveryMethod = null;
         }
-
         Boolean habitableOnly = habitableToggle.isSelected() ? true : null;
-
-        List<Exoplanet> results = exoplanetService.searchWithFilters(
-                selectedPlanetType,
-                selectedDiscoveryMethod,
-                habitableOnly
-        );
-
+        List<Exoplanet> results = exoplanetService.searchWithFilters(selectedPlanetType, selectedDiscoveryMethod, habitableOnly);
         System.out.println("Filtered results: " + results.size());
 
         if (results.isEmpty()) {
             return;
         }
-
-        selectPlanet(results.get(0));
+        selectPlanet(results.getFirst());
     }
 
     @FXML //clears all the values to null when called
-    private void handleClearFilters(){
-        String selectedPlanetType = null;
-        String selectedDiscoveryMethod = null;
-        boolean habitableOnly = false;
+    private void handleClearFilters() {
+        String selectedPlanetType = planetTypeComboBox.getValue();
+        String selectedDiscoveryMethod = discoveryMethodComboBox.getValue();
+        boolean habitableOnly = habitableToggle.isSelected();
+
+        return;
     }
 
 
@@ -140,14 +132,15 @@ public class DashboardController {
         systemPane.getChildren().add(canvas);
     }
 
-    @FXML //This method will handle the action of the random planet button producing a planet with the list of all the necessary values from the Repository
-    public void handleRandomPlanet() throws Exception{
+    @FXML
+    //This method will handle the action of the random planet button producing a planet with the list of all the necessary values from the Repository
+    public void handleRandomPlanet() throws Exception {
         Exoplanet planet = exoplanetService.findRandomPlanet();
         selectPlanet(planet);
     }
 
     //This method will handle things like labeling the planets title and host star, along with calling render system, and creating the hyperLink
-    public void selectPlanet(Exoplanet planet) throws Exception{
+    public void selectPlanet(Exoplanet planet) throws Exception {
         try {
             planetNameDisplay.setText(planet.planetName());
             hostStarNameDisplay.setText(planet.hostStar());
@@ -160,13 +153,16 @@ public class DashboardController {
             hyperLink.setText(url);
             urlLabel.setText("Link to NASA:");
 
-        } catch (Exception e){  //This clears up almost every exception that could come up, just finds a new random planet if anything goes wrong
+        } catch (
+                Exception e) {  //This clears up almost every exception that could come up, just finds a new random planet if anything goes wrong
             System.out.println(e.getMessage());
             handleRandomPlanet();
         }
     }
 
-    public void setStackedAreaChart(List<Exoplanet> planets){
+
+    //TODO create doc for this and simplify and fix the wrong display of data
+    public void setStackedAreaChart(List<Exoplanet> planets) {
         stackedAreaChart.getData().clear();
 
         // Sort by AU, nulls go to end
@@ -196,15 +192,30 @@ public class DashboardController {
 
     //This method uses an external library to add the values to the FXML bar chart, it uses a logarithmic scaling to have the graph be more understandable //TODO fix the ui and simplify
     public void setBarChart(Map<String, Double> travelTimes) {
+        barChart.setTitle("Time to get to Exoplanet");
+
+        //creates the first bar in the chart
+        XYChart.Series series1 = new XYChart.Series();
+        //Sets the name for that bar
+        series1.setName("New Horizon Years");
+        //Gets the data for that bar by entering the key for the map and doing a log operation on the time it takes
+        series1.getData().add(new XYChart.Data<>("New Horizons", Math.log10(travelTimes.get("New Horizons"))));
+
+        XYChart.Series series2 = new XYChart.Series();
+        series2.setName("Voyager Years");
+        series2.getData().add(new XYChart.Data<>("Voyager 1", Math.log10(travelTimes.get("Voyager 1"))));
+
+        XYChart.Series series3 = new XYChart.Series();
+        series3.setName("At light speed");
+        series3.getData().add(new XYChart.Data<>("At Light Speed", Math.log10(travelTimes.get("At Light Speed"))));
+
+        XYChart.Series series4 = new XYChart.Series();
+        series4.setName("1% Light Speed");
+        series4.getData().add(new XYChart.Data<>("1% Light Speed", Math.log10(travelTimes.get("1% Light Speed"))));
+
         barChart.getData().clear();
-        XYChart.Series<String, Number> series = new XYChart.Series<>();
-        series.setName("Travel Time (Years)");
+        barChart.getData().addAll(series1, series2, series3, series4);
 
-        for (Map.Entry<String, Double> entry : travelTimes.entrySet()) {
-            double logValue = Math.log10(entry.getValue());
-            series.getData().add(new XYChart.Data<>(entry.getKey(), logValue));
-        }
 
-        barChart.getData().add(series);
     }
 }
